<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".crud.KitapEkle">

    <EditText
            android:hint="@string/book_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/bookName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/authorName"
            android:layout_marginTop="100dp"
            android:inputType="text"/>
    <EditText
            android:hint="@string/author_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/authorName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/bookId"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/bookName"
            android:inputType="text"/>
    <EditText
            android:hint="@string/book_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/bookId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/authorName"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/categoryOfBook"
            android:inputType="text"/>
    <EditText
            android:hint="@string/category_of_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/categoryOfBook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/publishYear"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/bookId"
            android:layout_marginBottom="10dp"
            android:inputType="text"/>
    <EditText
            android:hint="@string/publish_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/publishYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/categoryOfBook"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/pageSize"
            android:inputType="numberDecimal"/>
    <EditText
            android:hint="@string/page_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/pageSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/publishYear" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/addButton"
            android:inputType="numberDecimal"/>
    <Button
            android:text="@string/add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/pageSize"
    />


</androidx.constraintlayout.widget.ConstraintLayout>