<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        tools:context=".crud.KitapGuncelle" android:id="@+id/hin">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Search Book Id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp" android:importantForAutofill="no" android:id="@+id/bookIdSearch"/>


    <EditText
            android:hint="@string/book_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/bookIdUpdate"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/bookNameUpdate" android:visibility="visible"/>
    <EditText
            android:hint="@string/author_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/authorNameUpdate" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/bookNameUpdate"
            android:visibility="visible"/>
    <EditText
            android:hint="@string/book_id"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/bookIdUpdate" android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/fetchBook" android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>
    <EditText
            android:hint="@string/category_of_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/authorNameUpdate"
            android:id="@+id/categoryOfBookUpdate" android:visibility="visible"/>
    <EditText
            android:hint="@string/publish_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/categoryOfBookUpdate" android:id="@+id/publishYearUpdate"
            android:visibility="visible"/>
    <EditText
            android:hint="@string/page_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/publishYearUpdate" android:id="@+id/pageSizeUpdate"
            tools:visibility="gone" android:visibility="visible" android:autofillHints=""/>
    <Button
            android:text="Fetch Book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/fetchBook"
            app:layout_constraintTop_toBottomOf="@+id/bookIdSearch"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.173"/>
    <Button
            android:text="Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/updateButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/publishYearUpdate"
            android:layout_marginTop="68dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>